--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,34 @@
 version: '3.8'
 
 services:
-  redis:
-    image: redis:7-alpine
-    container_name: collab-editor-redis
+  server:
+    build: .
     ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    command: redis-server --appendonly yes
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - "3001:3001"
+    environment:
+      - NODE_ENV=production
+      - PORT=3001
+      - MONGO_URI=mongodb://mongo:27017/collab-editor
+      - REDIS_URL=redis://redis:6379
+      - CLIENT_URL=http://localhost:5173
+    depends_on:
+      - mongo
+      - redis
+    restart: always
 
-  mongodb:
-    image: mongo:7
-    container_name: collab-editor-mongo
+  mongo:
+    image: mongo:6
     ports:
       - "27017:27017"
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password123
-      MONGO_INITDB_DATABASE: collab_editor
     volumes:
-      - mongo_data:/data/db
-    healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - mongo-data:/data/db
+    restart: always
+
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    restart: always
 
 volumes:
-  redis_data:
-  mongo_data:
+  mongo-data:
